EDU-757 Enable uploaded resource selection

--- a/src/components/resource-picker/files-upload-screen.less
+++ b/src/components/resource-picker/files-upload-screen.less
@@ -60,6 +60,12 @@
   color: @edu-secondary-color-dark;
 }
 
+.FilesUploadScreen-fileStatusName {
+  &.is-disabled {
+    text-decoration: none;
+  }
+}
+
 .FilesUploadScreen-imageOptimizationCheckbox {
   font-size: 13px;
   margin-left: auto;
