--- a/src/components/copyright-notice.less
+++ b/src/components/copyright-notice.less
@@ -1,6 +1,5 @@
 .CopyrightNotice {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   padding-top: 20px;
   font-size: 12px;
   gap: 5px;
