EDU-724 Fix merge conflict resolution error

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -110,6 +110,7 @@
 @import '../components/pages/room-membership-confirmation.less';
 @import '../components/resource-picker/files-upload-screen.less';
 @import '../components/media-player/multitrack-media-player.less';
+@import '../components/media-player/media-player-track-mixer.less';
 @import '../components/media-player/media-player-progress-bar.less';
 
 
