--- a/src/plugins/image-tiles/image-tiles.less
+++ b/src/plugins/image-tiles/image-tiles.less
@@ -6,6 +6,10 @@
   gap: 20px;
   margin-left: auto;
   margin-right: auto;
+
+  @media @edu-media-phone {
+    grid-template-columns: 1fr !important;
+  }
 }
 
 .ImageTilesDisplay-tile {
