EDU-738 Add info text for width

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -54,3 +54,8 @@
 .u-dropdown-icon {
   margin-right: 8px;
 }
+
+.u-info-icon {
+  color: @edu-secondary-color-dark;
+  margin: 0 @edu-button-spacing;
+}
