--- a/src/components/markdown-help.less
+++ b/src/components/markdown-help.less
@@ -27,13 +27,18 @@
       border-radius: 2px;
     }
 
-    &:hover, &:active, &:focus {
+    &:hover,
+    &:active,
+    &:focus {
       opacity: 1;
       transition: all 300ms ease;
     }
 
     &.is-disabled {
-      &:hover, &:active, &:focus {
+
+      &:hover,
+      &:active,
+      &:focus {
         opacity: @markdown-help-block-help-inactive-opacity;
       }
     }
@@ -48,6 +53,7 @@
 
 .MarkdownHelp-blockHelpTable {
   width: 100%;
+  table-layout: fixed;
   border-collapse: collapse;
 }
 
