--- a/src/components/media-player/track-mixer.less
+++ b/src/components/media-player/track-mixer.less
@@ -52,6 +52,7 @@
   font-size: (0.6 * @track-mixer-bar-height);
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   padding: 0 4px;
 
   &.TrackMixer-bar--secondaryTrack {
