--- a/src/plugins/multitrack-media/multitrack-media.less
+++ b/src/plugins/multitrack-media/multitrack-media.less
@@ -15,3 +15,8 @@
   max-width: 400px;
   margin: 0 auto 20px auto;
 }
+
+.MultitrackMediaEditor-errorMessage {
+  text-align: center;
+  color: @edu-error-color;
+}
