EDU-763 Smooth scroll to comments or page top when toggling comments view

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -24,6 +24,7 @@
 @import '../components/news-tab.less';
 @import '../components/room-card.less';
 @import '../components/rooms-tab.less';
+@import '../components/pages/doc.less';
 @import '../components/pages/user.less';
 @import '../components/pages/docs.less';
 @import '../components/error-page.less';
