EDU-771 Avoid gaps in flex layout because of older Safaris

--- a/src/components/action-button.less
+++ b/src/components/action-button.less
@@ -68,8 +68,5 @@
 }
 
 .ActionButtonGroup {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
+  .m-control-group;
 }
