--- a/src/components/byte-input.less
+++ b/src/components/byte-input.less
@@ -9,7 +9,7 @@
 
 .ByteInput-unitField {
   display: inline-block;
-  margin-left: @edu-button-spacing;
+  margin-left: @edu-control-spacing-base;
 
   &.ant-select {
     width: 80px;
