--- a/src/components/default-page-header.less
+++ b/src/components/default-page-header.less
@@ -37,5 +37,5 @@
 
 .DefaultPageHeader-loginButton {
   cursor: pointer;
-  margin-right: (3 * @edu-button-spacing);
+  margin-right: (3 * @edu-control-spacing-base);
 }
