--- a/src/components/document-card.less
+++ b/src/components/document-card.less
@@ -55,7 +55,6 @@
 
 .DocumentCard-notebookLink {
   display: flex;
-  gap: 5px;
   font-size: 13px;
   align-items: center;
   margin: 0 0 10px auto;
@@ -68,4 +67,6 @@
 
 .DocumentCard-notebookLinkArrow {
   font-size: 12px;
+  line-height: 12px;
+  margin-left: 5px;
 }
