--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -14,8 +14,8 @@
   display: grid;
   align-items: center;
   grid-auto-flow: column;
-  gap: @edu-controls-group-gap;
-  padding-left: @edu-controls-group-gap;
+  gap: @edu-control-spacing-wide;
+  padding-left: @edu-control-spacing-wide;
 }
 
 .EditControlPanel-rightSideButton {
