--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -19,7 +19,8 @@
 }
 
 .FavoritesTab-cards {
-  .m-cards-section-content;
+  .m-section-content;
+  .m-card-wrapper;
 }
 
 .FavoritesTab-cardWrapper {
