--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -1,15 +1,15 @@
 .FilesGridViewer {
   display: flex;
-  gap: 20px;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: flex-start;
-  padding: @edu-content-padding;
+  padding: 5px;
 }
 
 .FilesGridViewer-fileContainer {
   width: 80px;
   padding: 5px;
+  margin: 10px;
   position: relative;
   border-radius: @edu-border-radius-base;
 
