--- a/src/components/files-list-viewer.less
+++ b/src/components/files-list-viewer.less
@@ -51,10 +51,8 @@
   display: none;
 
   &.are-visible {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 5px;
+    .m-control-group;
+    justify-content: end;
   }
 }
 
