--- a/src/components/history-control-panel.less
+++ b/src/components/history-control-panel.less
@@ -22,8 +22,8 @@
   display: grid;
   align-items: center;
   grid-auto-flow: column;
-  gap: 1.5 * @edu-button-spacing;
-  padding-right: 1.5 * @edu-button-spacing;
+  gap: 1.5 * @edu-control-spacing-base;
+  padding-right: 1.5 * @edu-control-spacing-base;
   padding-left: @edu-content-padding;
 }
 
