--- a/src/components/input-and-preview.less
+++ b/src/components/input-and-preview.less
@@ -1,6 +1,6 @@
 .InputAndPreview {
   display: grid;
-  gap: 5px;
+  gap: @edu-control-spacing-base;
   grid-template-columns: 50% 50%;
 
   @media @edu-media-phone {
