--- a/src/components/media-player/media-player-controls.less
+++ b/src/components/media-player/media-player-controls.less
@@ -23,14 +23,13 @@
 }
 
 .MediaPlayerControls-playbackRateItem {
-  display: flex;
-  gap: 5px;
-  align-items: center;
+  .m-control-group;
 }
 
 .MediaPlayerControls-playbackRateItemSelection {
   width: 10px;
   font-size: 12px;
+  line-height: 12px;
 }
 
 .MediaPlayerControls-controlsGroup {
