--- a/src/components/media-player/media-player-track-mixer.less
+++ b/src/components/media-player/media-player-track-mixer.less
@@ -1,7 +1,7 @@
 .MediaPlayerTrackMixer {
-  gap: 10px;
   display: flex;
   flex-wrap: wrap;
+  .m-fake-flex-gap(10px);
 }
 
 .MediaPlayerTrackMixer-track {
