--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -14,7 +14,7 @@
 }
 
 .DocPage-controlPanelsItem {
-  margin-left: 5px;
+  margin-left: @edu-control-spacing-base;
 
   &.is-open {
     margin-left: 0;
