--- a/src/components/pages/docs.less
+++ b/src/components/pages/docs.less
@@ -3,11 +3,10 @@
 .DocsPage-controls {
   margin-bottom: 20px;
   display: grid;
-  column-gap: 15px;
+  gap: 15px;
   grid-template-columns: 2fr 1fr;
 
   @media @edu-media-phone {
-    row-gap: 15px;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
   }
@@ -15,10 +14,6 @@
 
 .DocsPage-filter {
   width: 100%;
-}
-
-.DocsPage-actions {
-  text-align: center;
 }
 
 .DocsPage-newDocumentButton {
