--- a/src/components/pages/login.less
+++ b/src/components/pages/login.less
@@ -20,7 +20,8 @@
 }
 
 .LoginPage-hint {
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
   gap: 10px;
   font-size: 12px;
   cursor: pointer;
