--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -6,11 +6,10 @@
 
 .SearchPage-controls {
   display: grid;
-  column-gap: 15px;
   grid-template-columns: 2fr 1fr;
+  gap: 15px;
 
   @media @edu-media-phone {
-    row-gap: 15px;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
   }
