--- a/src/components/pages/user.less
+++ b/src/components/pages/user.less
@@ -38,7 +38,8 @@
 }
 
 .UserPage-sectionCards {
-  .m-cards-section-content;
+  .m-section-content;
+  .m-card-wrapper;
 }
 
 .UserPage-sectionLink {
