--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -29,9 +29,7 @@
 }
 
 .ProfileHeader-email {
-  display: flex;
-  gap: 8px;
-  align-items: center;
+  .m-control-group-wide;
   font-size: 12px;
   margin-top: 5px;
   color: @edu-text-color-secondary;
