--- a/src/components/profile-tab.less
+++ b/src/components/profile-tab.less
@@ -26,8 +26,8 @@
 }
 
 .ProfileTab-avatar {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+  display: grid;
+  grid-auto-flow: row;
+  gap: @edu-control-spacing-base;
   margin-bottom: 20px;
 }
