--- a/src/components/resource-picker/files-upload-screen.less
+++ b/src/components/resource-picker/files-upload-screen.less
@@ -18,9 +18,7 @@
 }
 
 .FilesUploadScreen-fileStatusRow {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+  .m-control-group-wide;
 }
 
 .FilesUploadScreen-fileStatusError {
