--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -14,7 +14,8 @@
 }
 
 .RoomsTab-roomsGroup {
-  .m-cards-section-content;
+  .m-section-content;
+  .m-card-wrapper;
 }
 
 .RoomsTab-noRoomsInGroup {
