--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -112,10 +112,7 @@
 }
 
 .SectionDisplay-sectionInfo {
-  display: grid;
-  gap: 5px;
-  align-items: center;
-  grid-auto-flow: column;
+  .m-control-group;
   padding: 0 5px;
   height: @edu-control-height-sm;
   border: 1px solid @edu-border-color-dark;
