--- a/src/components/tag-selector.less
+++ b/src/components/tag-selector.less
@@ -2,7 +2,7 @@
   position: relative;
 
   &.is-adding-subsequent-tag {
-    margin-left: @tag-gap;
+    margin-left: @edu-control-spacing-base;
   }
 }
 
