--- a/src/components/ui-language-dialog.less
+++ b/src/components/ui-language-dialog.less
@@ -6,8 +6,8 @@
 
 .UiLanguageDialog-languages {
   display: grid;
-  column-gap: 25px;
   grid-auto-flow: column;
+  gap: 25px;
 }
 
 .UiLanguageDialog-language {
