--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -150,9 +150,7 @@
 }
 
 .InteractiveMediaDisplay-overlayChapterAnswer {
-  display: flex;
-  gap: @edu-controls-group-gap;
-  align-items: center;
+  .m-control-group-wide;
 }
 
 .InteractiveMediaDisplay-answerMark {
@@ -169,9 +167,8 @@
 
 .InteractiveMediaDisplay-overlayChapterControls {
   flex: none;
-  display: flex;
-  gap: @edu-controls-group-gap;
-  justify-content: flex-end;
+  justify-content: end;
+  .m-control-group-wide;
 }
 
 .InteractiveMediaDisplay-progressBar {
@@ -182,7 +179,5 @@
 }
 
 .InteractiveMediaDisplay-progressBarCards {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+  .m-control-group-wide;
 }
