--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -23,12 +23,12 @@
 
 // Layout
 @edu-page-content-padding: 30px;
-@edu-controls-group-gap: 10px;
+@edu-control-spacing-base: 5px;
+@edu-control-spacing-wide: 10px;
 @edu-content-padding: 15px;
 @edu-min-page-width: 200px;
 @edu-content-width-wide: 1200px;
 @edu-content-width-narrow: 800px;
-@edu-button-spacing: 6px;
 @edu-control-height-base: 32px;
 @edu-control-height-lg: 40px;
 @edu-control-height-sm: 24px;
