--- a/src/components/card-selector.less
+++ b/src/components/card-selector.less
@@ -1,8 +1,7 @@
 @card-selector-selected-card-background-color: lighten(@edu-primary-color-light, 35%);
 
 .CardSelector {
-  display: inline-flex;
-  gap: 5px;
+  .m-control-group;
 }
 
 .CardSelector-card {
