--- a/src/components/collapsible.less
+++ b/src/components/collapsible.less
@@ -13,12 +13,10 @@
 }
 
 .Collapsible-header {
-  display: flex;
-  align-items: center;
+  .m-control-group-wide;
   overflow-x: hidden;
   text-decoration: none;
   color: @edu-text-color;
-  gap: @edu-content-padding;
   padding: 12px @collapsible-padding;
   border-radius: @edu-border-radius-base;
   border: 1px solid @edu-border-color-light;
@@ -85,9 +83,6 @@
   border-top: none;
 
   &.Collapsible-content--standalone {
-    display: flex;
-    align-items: center;
-    gap: 20px;
     border-radius: @edu-border-radius-base;
     border: 1px solid @edu-border-color-light;
 
