--- a/src/components/grid-selector.less
+++ b/src/components/grid-selector.less
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   display: grid;
-  gap: @edu-button-spacing;
+  gap: @edu-control-spacing-base;
   grid-template-columns: repeat(auto-fill, minmax(min(@grid-selector-item-width, 100%), 1fr));
 }
 
@@ -13,11 +13,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2px;
   height: auto;
   width: 100%;
   margin: 0;
-  padding: @edu-button-spacing;
+  padding: @edu-control-spacing-base;
   border: 1px solid transparent;
   border-radius: @edu-border-radius-base;
   cursor: pointer;
@@ -34,7 +33,7 @@
 }
 
 .GridSelector-itemIcon {
-  padding-top: 5px;
+  padding: 2px;
   font-size: @grid-selector-icon-size;
 }
 
