--- a/src/components/resource-picker/utilities.less
+++ b/src/components/resource-picker/utilities.less
@@ -2,13 +2,16 @@
   position: absolute;
   top: 0;
   left: 0;
-  gap: 20px;
   width: 100%;
   height: 100%;
   background-color: @edu-white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  & > *:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .u-resource-picker-screen-content {
@@ -30,13 +33,9 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: @edu-controls-group-gap;
   justify-content: space-between;
 }
 
 .u-resource-picker-screen-footer-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: @edu-controls-group-gap;
+  .m-control-group-wide;
 }
