--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -1,4 +1,3 @@
-@tag-gap: 5px;
 @tag-font-size: 12px;
 @tag-padding: 3px 16px;
 @tag-border-radius: 22px;
@@ -11,7 +10,7 @@
   border-radius: @tag-border-radius;
   background-color: @edu-background-color-base;
   font-size: @tag-font-size;
-  margin: 3px @tag-gap 3px 0;
+  margin: 3px @edu-control-spacing-base 3px 0;
   border: none;
 
   &:last-of-type {
