--- a/test-app/src/bundles/page-header.less
+++ b/test-app/src/bundles/page-header.less
@@ -37,5 +37,5 @@
 
 .PageHeader-loginButton {
   cursor: pointer;
-  margin-right: (3 * @edu-button-spacing);
+  margin-right: (3 * @edu-control-spacing-base);
 }
