EDU-763 Replace grid-gap with gap

--- a/src/components/news-tab.less
+++ b/src/components/news-tab.less
@@ -16,7 +16,7 @@
 .NewsTab-activity {
   display: grid;
   font-size: 13px;
-  grid-gap: @news-tab-activity-grid-gap;
+  gap: @news-tab-activity-grid-gap;
   align-items: center;
   grid-auto-flow: column;
   justify-content: flex-start;
@@ -27,14 +27,14 @@
   background-color: @edu-background-color-base;
 
   @media @edu-media-phone {
-    grid-gap: 3px;
+    gap: 3px;
     grid-auto-flow: row;
   }
 }
 
 .NewsTab-activityMetadata {
   display: grid;
-  grid-gap: @news-tab-activity-grid-gap;
+  gap: @news-tab-activity-grid-gap;
   align-items: center;
   grid-auto-flow: column;
   justify-content: flex-start;
