--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -1,12 +1,12 @@
 .ProfileHeader {
   display: grid;
-  grid-gap: 35px;
+  gap: 35px;
   align-items: center;
   justify-content: center;
   grid-auto-flow: column;
 
   @media @edu-media-phone {
-    grid-gap: 15px;
+    gap: 15px;
     grid-auto-flow: row;
   }
 }
