--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -7,7 +7,7 @@
   bottom: 0;
   margin-right: 50px;
   display: grid;
-  grid-gap: 5px;
+  gap: 5px;
   justify-content: end;
   grid-template-columns: repeat(3, @doc-page-control-panels-column-width);
 }
