EDU-773 Fix control panel width issue

--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -1,15 +1,24 @@
-@doc-page-control-panels-column-width: @edu-control-height-sm + (2 * @edu-content-padding);
-
 .DocPage {}
 
 .DocPage-controlPanels {
   position: sticky;
   bottom: 0;
   margin-right: 50px;
-  display: grid;
-  gap: 5px;
-  justify-content: end;
-  grid-template-columns: repeat(3, @doc-page-control-panels-column-width);
+  display: flex;
+  justify-content: flex-end;
+  z-index: @edu-z-index-overlay-layer;
+
+  &.is-panel-open {
+    margin: 0;
+  }
+}
+
+.DocPage-controlPanelsItem {
+  margin-left: 5px;
+
+  &.is-open {
+    margin-left: 0;
+  }
 }
 
 .DocPage-commentsSection {
