EDU-765 Render comments grouped by topic

--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -22,5 +22,11 @@
 }
 
 .DocPage-commentsSection {
-  margin: 40px 0;
+  margin: 60px 0;
+}
+
+.DocPage-commentsSectionHeader {
+  font-size: @edu-heading-5-size;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
