--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -30,3 +30,25 @@
   font-weight: bold;
   margin-bottom: 20px;
 }
+
+.DocPage-comment {
+  margin: 15px 15px 30px 15px;
+
+  &:last-of-type {
+    margin-bottom: 15px;
+  }
+}
+
+.DocPage-commentMetadata {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+}
+
+.DocPage-commentAuthor {
+  font-weight: bold;
+}
+
+.DocPage-commentText {
+  padding: 5px 15px 0 15px;
+}
