--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -32,10 +32,11 @@
 }
 
 .DocPage-comment {
-  margin: 15px 15px 30px 15px;
+  margin: @edu-content-padding;
+  margin-bottom: 3 * @edu-content-padding;
 
   &:last-of-type {
-    margin-bottom: 15px;
+    margin-bottom: @edu-content-padding;
   }
 }
 
@@ -49,6 +50,13 @@
   font-weight: bold;
 }
 
+.DocPage-commentDate {
+  font-style: italic;
+}
+
 .DocPage-commentText {
-  padding: 5px 15px 0 15px;
+  margin: 5px;
+  padding: @edu-content-padding;
+  border-radius: @edu-border-radius-base;
+  background-color: lighten(@edu-primary-color-light, 42%);
 }
