EDU-774 Fix prop validation and show nice error messages

--- a/src/components/media-player/multitrack-media-player.less
+++ b/src/components/media-player/multitrack-media-player.less
@@ -7,6 +7,11 @@
   }
 }
 
+.MultitrackMediaPlayer-errorMessage {
+  text-align: center;
+  color: @edu-error-color;
+}
+
 .MultitrackMediaPlayer-trackMixer {
   margin-top: 15px;
   padding-top: 15px;
