EDU-766 Extract comments-panel component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -60,6 +60,7 @@
 @import '../components/markdown-help.less';
 @import '../components/card-selector.less';
 @import '../components/action-button.less';
+@import '../components/comments-panel.less';
 @import '../components/consent-drawer.less';
 @import '../components/credits-footer.less';
 @import '../components/pages/register.less';
