EDU-766 Support posting comments

--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -1,4 +1,10 @@
-.CommentsPanel {
+.CommentsPanel {}
+
+.CommentsPanel-topicPanel {
+  position: relative;
+}
+
+.CommentsPanel-comment {
   margin: @edu-content-padding;
   margin-bottom: 3 * @edu-content-padding;
 
