EDU-766 Show character count for new comment text

--- a/src/components/markdown-input.less
+++ b/src/components/markdown-input.less
@@ -17,6 +17,10 @@
   }
 }
 
+.MarkdownInput-inlineInputContainer {
+  position: relative;
+}
+
 .MarkdownInput-textareaContainer {
   position: relative;
   display: grid;
@@ -55,4 +59,12 @@
   bottom: 0;
   opacity: 0.4;
   font-size: 18px;
+}
+
+.MarkdownInput-count {
+  position: absolute;
+  bottom: -15px;
+  right: 10px;
+  font-size: 10px;
+  color: @edu-text-color-secondary;
 }
