EDU-766 Support posting a new comment under a new topic

--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -2,6 +2,21 @@
 
 .CommentsPanel-topicPanel {
   position: relative;
+
+  &.CommentsPanel-topicPanel--newTopic {
+    .ant-collapse-header {
+      display: flex;
+      align-items: center;
+    }
+
+    .ant-collapse-header-text {
+      width: 100%;
+    }
+  }
+}
+
+.CommentsPanel-newTopicInput {
+  padding: 5px 0;
 }
 
 .CommentsPanel-comment {
