EDU-768 Transform image-tiles to catalog plugin

--- a/src/plugins/catalog/catalog.less
+++ b/src/plugins/catalog/catalog.less
@@ -1,6 +1,6 @@
-.ImageTilesDisplay {}
+.CatalogDisplay {}
 
-.ImageTilesDisplay-grid {
+.CatalogDisplay-grid {
   display: grid;
   align-items: start;
   gap: 20px;
@@ -12,19 +12,19 @@
   }
 }
 
-.ImageTilesDisplay-tile {
+.CatalogDisplay-item {
   text-align: center;
   overflow-x: hidden;
 
-  &.ImageTilesDisplay-tile--noLink {
+  &.CatalogDisplay-item--noLink {
     cursor: not-allowed;
   }
 }
 
-.ImageTilesDisplay-img {
+.CatalogDisplay-image {
   max-width: 100%;
 }
 
-.ImageTilesDisplay-description {
+.CatalogDisplay-title {
   color: inherit;
 }
