EDU-767 Show placeholder text fot deleted comments

--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -49,6 +49,10 @@
   padding: @edu-content-padding;
   border-radius: @edu-border-radius-base;
   background-color: lighten(@edu-primary-color-light, 42%);
+
+  &.CommentsPanel-text--deleted {
+    font-style: italic;
+  }
 }
 
 .CommentsPanel-commentDeleteButton {
