--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -66,3 +66,10 @@
   margin-left: auto;
   display: flex;
 }
+
+.CommentsPanel-editTopicButtonsGroup {
+  display: grid;
+  gap: 5px;
+  align-items: center;
+  grid-auto-flow: column;
+}
