EDU-777 Show document badges on doc and docs pages

--- a/src/components/favorite-star.less
+++ b/src/components/favorite-star.less
@@ -1,4 +1,7 @@
-.FavoriteStar {}
+.FavoriteStar {
+  display: flex;
+  align-content: center;
+}
 
 .FavoriteStar-rate {
   color: @edu-secondary-color-dark;
