--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -33,3 +33,15 @@
   font-weight: bold;
   margin-bottom: 20px;
 }
+
+.DocPage-badges {
+  .m-control-group;
+}
+
+.DocPage-verifiedBadge {
+  padding: 8px;
+  font-size: 16px;
+  color: @edu-text-color-secondary;
+  background-color: @edu-background-color-base;
+  border-radius: 50%;
+}
