--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -62,3 +62,22 @@
   color: @edu-secondary-color-dark;
   margin: 0 @edu-control-spacing-base;
 }
+
+.u-verified {
+  padding: 8px;
+  font-size: 16px;
+  color: @edu-text-color-secondary;
+  background-color: @edu-background-color-base;
+  border-radius: 50%;
+}
+
+.u-allowed-open-contribution {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: @edu-text-color-secondary;
+  background-color: @edu-background-color-base;
+  border-radius: 50%;
+}
