--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -63,7 +63,7 @@
   margin: 0 @edu-control-spacing-base;
 }
 
-.u-verified {
+.u-verified-badge {
   padding: 8px;
   font-size: 16px;
   color: @edu-text-color-secondary;
@@ -71,10 +71,11 @@
   border-radius: 50%;
 }
 
-.u-allowed-open-contribution {
+.u-allowed-open-contribution-badge {
   width: 32px;
   height: 32px;
   display: flex;
+  font-size: 17px;
   align-items: center;
   justify-content: center;
   color: @edu-text-color-secondary;
