--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -138,6 +138,7 @@
 @import '../plugins/quick-tester/quick-tester.less';
 @import '../plugins/ear-training/ear-training.less';
 @import '../plugins/abc-notation/abc-notation.less';
+@import '../plugins/media-slideshow/media-slideshow.less';
 @import '../plugins/interval-trainer/interval-trainer.less';
 @import '../plugins/multitrack-media/multitrack-media.less';
 @import '../plugins/interactive-media/interactive-media.less';
