EDU-784 Extract chapter selector and common translations

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -100,6 +100,7 @@
 @import '../components/localization/language-icon.less';
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/browser-not-supported.less';
+@import '../components/media-player/chapter-selector.less';
 @import '../components/pages/complete-password-reset.less';
 @import '../components/media-player/media-player-track.less';
 @import '../components/media-player/media-volume-slider.less';
