EDU-784 Fix overlay image rendering

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -78,6 +78,8 @@
 }
 
 .InteractiveMediaDisplay-overlay {
+  width: 100%;
+  height: 100%;
   padding: @edu-content-padding;
   background-color: @edu-background-color-light;
   display: flex;
