--- a/src/components/media-player/media-player-track.less
+++ b/src/components/media-player/media-player-track.less
@@ -25,6 +25,10 @@
   position: absolute;
   top: 0;
   left: 0;
+
+  &.is-hidden {
+    display: none;
+  }
 }
 
 .MediaPlayerTrack--audioModeOverlay {
@@ -47,7 +51,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  display: grid;
-  align-items: stretch;
-  justify-items: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
