--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -1,5 +1,19 @@
 .MediaSlideshowDisplay {}
 
+.MediaSlideshowDisplay-chapterImageOverlayWrapper {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.MediaSlideshowDisplay-chapterImageOverlay {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .MediaSlideshowDisplay-content {
   position: relative;
   margin: 0 auto;
@@ -55,6 +69,7 @@
 
 .MediaSlideshowEditor-chapterImagePlaceholder {
   height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,8 +77,17 @@
   color: @edu-text-color-secondary;
 }
 
-.MediaSlideshow-chapterImageOverlay {
+.MediaSlideshowEditor-chapterImageOverlayWrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.MediaSlideshowEditor-chapterImageOverlay {
   display: block;
   margin: 0 auto;
   max-width: 100%;
+  max-height: 100%;
 }
