--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -1,19 +1,5 @@
 .MediaSlideshowDisplay {}
 
-.MediaSlideshowDisplay-chapterImageOverlayWrapper {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.MediaSlideshowDisplay-chapterImageOverlay {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  max-height: 100%;
-}
-
 .MediaSlideshowDisplay-content {
   position: relative;
   margin: 0 auto;
@@ -77,17 +63,17 @@
   color: @edu-text-color-secondary;
 }
 
-.MediaSlideshowEditor-chapterImageOverlayWrapper {
+.MediaSlideshow-chapterImageOverlayWrapper {
   height: 100%;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
 }
 
-.MediaSlideshowEditor-chapterImageOverlay {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  max-height: 100%;
+.MediaSlideshow-chapterImageOverlay {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
