EDU-781 Fix resource picker UI on mobile

--- a/src/components/resource-picker/storage-location.less
+++ b/src/components/resource-picker/storage-location.less
@@ -22,8 +22,12 @@
   justify-content: space-between;
 }
 
-.StorageLocation-selectContainer {
-  min-width: 100px;
+.StorageLocation-buttonsLineItem {
+  margin-top: @edu-control-spacing-base;
+
+  &.StorageLocation-buttonsLineItem--select {
+    min-width: 100px;
+  }
 }
 
 .StorageLocation-select {
