--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -114,8 +114,9 @@
 .InteractiveMediaDisplay-progressBar {
   margin-top: 15px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
 }
 
 .InteractiveMediaDisplay-progressBarCards {
