--- a/src/components/media-player/track-mixer.less
+++ b/src/components/media-player/track-mixer.less
@@ -51,6 +51,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  overflow-x: hidden;
   padding: 0 4px;
 
   &.TrackMixer-bar--secondaryTrack {
