EDU-804 Add toggle for chapter mode

--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -26,8 +26,15 @@
   padding-left: 10px;
 }
 
-.MediaSlideshowEditor-chapterImageOverlayWrapper {
-  background-color: @edu-white;
+.MediaSlideshow-chapterTextOverlayWrapper {
+  height: 100%;
+  width: 100%;
+  padding: @edu-content-padding;
+  background-color: @edu-background-color-light;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .MediaSlideshow-chapterImageOverlayWrapper {
