--- a/src/components/resource-picker/storage-location.less
+++ b/src/components/resource-picker/storage-location.less
@@ -38,3 +38,10 @@
   min-height: 40px;
   margin-bottom: 20px;
 }
+
+.StorageLocation-currentDirectory {
+  .m-overflow-ellipsis;
+  font-size: 11px;
+  padding-left: 5px;
+  font-style: italic;
+}
