--- a/src/components/admin/technical-maintenance-tab.less
+++ b/src/components/admin/technical-maintenance-tab.less
@@ -1,11 +1,29 @@
 .TechnicalMaintenanceTab {}
 
-.TechnicalMaintenanceTab-row {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
+.TechnicalMaintenanceTab-tabInfo {
+  .m-info-card;
+}
 
-  &:last-of-type {
-    margin-bottom: 0;
-  }
+.TechnicalMaintenanceTab-section {
+  margin: 50px 0;
+}
+
+.TechnicalMaintenanceTab-sectionHeader {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.TechnicalMaintenanceTab-sectionDescription {
+  padding-bottom: 15px;
+}
+
+.TechnicalMaintenanceTab-button {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+}
+
+.TechnicalMaintenanceTab-buttonSubtext {
+  font-size: 11px;
+  margin-top: 5px;
 }
