EDU-802 Improve status display on batches page

--- a/src/components/pages/batches.less
+++ b/src/components/pages/batches.less
@@ -4,6 +4,22 @@
   margin-bottom: 20px;
 }
 
+.BatchesPage-status {
+
+  &.BatchesPage-status--success {
+    color: @edu-success-color;
+    font-weight: bold;
+  }
+  &.BatchesPage-status--warning {
+    color: @edu-warning-color;
+    font-weight: bold;
+  }
+  &.BatchesPage-status--error {
+    color: @edu-error-color;
+    font-weight: bold;
+  }
+}
+
 .BatchesPage-batchErrorsList {
   margin-bottom: 20px;
 }
