EDU-802 Make filtering the task table more obvious

--- a/src/components/pages/batches.less
+++ b/src/components/pages/batches.less
@@ -4,6 +4,11 @@
   margin-bottom: 20px;
 }
 
+.BatchesPage-tableFilter {
+  text-align: right;
+  margin-bottom: @edu-control-spacing-wide;
+}
+
 .BatchesPage-status {
 
   &.BatchesPage-status--success {
